[server] Correct @tags for board controller & update swagger docs
