# server/docs/swagger.json
@@ -733,7 +733,7 @@
                 ],
                 "description": "Create a new board with the given name",
                 "tags": [
-                    "board"
+                    "boards"
                 ],
                 "summary": "Create a new board",
                 "parameters": [
@@ -907,7 +907,7 @@
                 ],
                 "description": "List all boards for the current user",
                 "tags": [
-                    "board"
+                    "boards"
                 ],
                 "summary": "List all boards",
                 "responses": {
